RESOLVED FIXED240935
Fix typo in ConcatenateCTM display list item serialization
https://bugs.webkit.org/show_bug.cgi?id=240935
Summary Fix typo in ConcatenateCTM display list item serialization
Cameron McCormack (:heycam)
Reported 2022-05-25 17:57:44 PDT
Attachments
Cameron McCormack (:heycam)
Comment 1 2022-05-25 17:58:51 PDT
EWS
Comment 2 2022-05-27 20:14:11 PDT
Committed r294979 (251083@main): <https://commits.webkit.org/251083@main> Reviewed commits have been landed. Closing PR #1034 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-05-27 20:15:14 PDT
Note You need to log in before you can comment on or make changes to this bug.