Fix typo in ConcatenateCTM display list item serialization https://bugs.webkit.org/show_bug.cgi?id=240935

Reviewed by Simon Fraser.

* LayoutTests/displaylists/extent-includes-transforms-expected.txt:
* LayoutTests/platform/mac-wk1/displaylists/extent-includes-transforms-expected.txt:
* Source/WebCore/platform/graphics/displaylists/DisplayListItems.cpp:
(WebCore::DisplayList::operator<<):

Canonical link: https://commits.webkit.org/251083@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294979 268f45cc-cd09-0410-ab3c-d52691b4dbfc